[package]
name = "cluFullTransmute"
version = "1.3.1"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluFullTransmute.git"
edition = "2024"

license = "Apache-2.0"
readme = "README.md"

description = "A more complete and extended version of data type conversion without constraint checks."
keywords = ["transmute", "unsafe_transmute", "cluFullTransmute", "no_std", "clucompany"]
categories = ["development-tools", "memory-management"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["contract", "inline", "compatible_stdapi", "support_size_check_transmute"]
# includes `contract.rs` api.
contract = []
# includes `inline_unchecked_transmute` api.
inline = []
# includes `mem::transmute` api.
compatible_stdapi = []
# includes `transmute_or_panic`, `transmute_or_errresult` api.
support_size_check_transmute = []
# includes `core::fmt::Display`, `std::error::Error` api.
support_stderr = []
to = []


# Add transmutation checks regardless of the selected function, 
# only works when `debug_assert` is active
require_debug_assert_transmute = []

[dependencies]