[package]
name = "cluFullTransmute"
version = "1.4.1"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluFullTransmute.git"
edition = "2024"

license = "Apache-2.0"
readme = "README.md"

description = "Extended, no-constraint type transmutation API, featuring safe checks and const-ready logic."
keywords = [
	"transmute", 
	"memory", 
	"no_std", 
	"type-conversion", 
	"clucompany"
]

categories = [
	"development-tools", 
	"no-std",
	"memory-management"
]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = [
	"contract", 
	"transmute-inline", 
	"error_details", 
	"compatible_stdapi", 
	"support_size_check_transmute"
]

# includes `contract.rs` api.
contract = [] 
# includes `mem::transmute` api.
compatible_stdapi = []
# enables the `std::error::Error` API for errors.
stderr = []

transmute-inline = []
transmute-inline-always = []

# includes `try_transmute_or_panic`, `try_transmute` api.
support_size_check_transmute = []

# Add transmutation checks regardless of the selected function, 
# only works when `debug_assert` is active
require_debug_assert_transmute = ["support_size_check_transmute"]

# includes `to.rs` api.
to = []
# display detailed error information in error description
error_details = ["cluConstData"]

[dependencies]
cluConstData = {version = "2.1.1", default-features = false, features = ["const_buf"], optional = true}